src/objects/ints__TUCR_Employment__c.object
<CustomObject>
    <fields>
        <fullName>ints__DateHired__c</fullName>
        <label>Date Hired</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DateSeparated__c</fullName>
        <label>Date Separated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DateVerified__c</fullName>
        <label>Date Verified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__EmpName__c</fullName>
        <label>Emp Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Income__c</fullName>
        <label>Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Occupation__c</fullName>
        <label>Occupation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipLabel>TUCR Employments</relationshipLabel>
        <relationshipName>TUCR_Employments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TUCR Employment</label>
    <nameField>
        <displayFormat>TUCR_AMP-{000000000}</displayFormat>
        <label>TUCR Employment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>